--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -115,6 +115,12 @@ td button {
     margin-top: 20px;
     height: 100px;
 }
+img {
+       
+       object-fit: contain;
+
+   }
+
 
 
 #back-button {
