--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -117,6 +117,9 @@ td button {
     border-radius: 5px;
    }
 
+   td button:hover {
+    background-color:#fe7e02;
+}
  
 .container-do-search {
     margin-top: 20px;
@@ -138,6 +141,7 @@ img {
     border-radius: 5px;
     font-size: 10px;
     color: black;
+     align:center;
 }
 
 #back-button:hover {
