--- a/modulo1/flex-grid/index.css
+++ b/modulo1/flex-grid/index.css
@@ -4,32 +4,129 @@
     box-sizing: border-box;
 }
 
-.grid { 
-    background-color: blueviolet;
-    height: 500px;
-    width: 500px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 100px;
-    grid-template-rows: 2fr 2fr 1fr;
-    row-gap: 20px;
-    column-gap: 10px;
-    /* justify-items: end; */
-    align-items: end;
+
+header{
+
+    display:flex;
+    align-self: center; 
+    background-color: mediumvioletred;
+    justify-content:space-between;
+    padding:6px;
+    margin:10px;
+ }
+
+
+.logo{
+    display: flex;
+    align-items:center;
+    gap:8vh;
 }
 
-div { 
-    background-color: gray;
-    width: 100%;
-    height: 100%;
+button{
+    width:60px;
+    height: 30px;
+    border-radius: 4px;
+    border:none;
+    cursor:pointer;
+
+}
+.icone{
+    width:20px;
+    height: 20px;
+    margin-right: 10px;
+    } 
+
+    .img{
+        width:20%
+    }
+    footer{
+    
+    text-align: center;
+    align-self: center; 
+    background-color: mediumvioletred;
+    justify-content:space-between;
+    padding:6px;
+    margin:10px;
+        
+    }
+
+
+    main{
+        display: flex;
+        flex-grow: 1;
+    }
+    .barra-lateral{
+        background-color: #f2d0e0;
+        width:250px;
+    }
+
+     .parte-principal{
+        display: flex;
+        background-color: #f2d0e0;
+        width:50px;
+        flex-grow: 1;
+        align-items: center;
+        justify-content:space-evenly;
+        flex-wrap: wrap;
+
+    } 
+
+    /* .parte-principal{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: 1fr 1fr;
+        flex-wrap: wrap;
+    } */
+    
+    .item{
+        width: 100%;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content:space-between;
+        padding: 16px;
+
+    }
+
+    .item img{
+
+        width:16px;
+    }
+    .nav-item{
+
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        
+    }
+
+.card{
+
+    width: 16.rem;
+    border: 1px solid block;
+    background-color: beige;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: 8px 8px;
+
 }
 
-.div1 {
-    /* grid-column: 1 / 4; */
-    background-color: blue;
-    grid-row: 1 / 3;
+.card img {
+
+    width:100%;
+
+}
+.card h1{
+    font-size: 16px;
+    padding: 3px;
+    text-align: center;
+
 }
 
-.div2 {
-    grid-column: 2 / 4;
-    background-color: yellow;
+.card p{
+    padding: 8px;
+    font-size: 12px;
+    text-align: center;
 }
